--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,14 +1,7 @@
 <template name="Home_Page">
-  <div class="ui middle aligned centered grid text container">
+  <div style="margin-top: 20px" class="ui middle aligned centered grid text container">
 
-    <div class="four wide column">
-      <img class="ui small circular image" src="/images/meteor-logo.png"/>
-    </div>
-
-    <div class="eight wide column">
-      <h1>Welcome to this template</h1>
-      <p>Now get to work and modify this app!</p>
-    </div>
+    <p>Things will go here for the home page eventually</p>
 
   </div>
 </template>
