--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -2,6 +2,7 @@
   <div style="margin-top: 20px" class="ui middle aligned centered grid text container">
 
     <p>Things will go here for the home page eventually</p>
+  <p>Howzit hehexd</p>
 
   </div>
 </template>
