--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,6 +1,8 @@
 <template name="Home_Page">
   <div style="margin-top: 20px" class="ui middle aligned centered grid text container">
 
+    <img style="width: 800px; height: 300px; margin-bottom: 30px" classs="ui fluid image" src="/images/fMarket.jpg">
+
     <p>Things will go here for the home page eventually</p>
   <p>Howzit hehexd</p>
 
