--- a/app/imports/ui/pages/list-markets-page.html
+++ b/app/imports/ui/pages/list-markets-page.html
@@ -1,5 +1,4 @@
-<template name="List_Stuff_Page">
-  {{#If_Logged_In}}
+<template name="List_Markets_Page">
     <div class="ui text container">
       {{#if Template.subscriptionsReady}}
         <table style="margin-top: 20px" class="ui celled table">
@@ -25,5 +24,4 @@
         {{> Loading}}
       {{/if}}
     </div>
-  {{/If_Logged_In}}
 </template>
