Readded List Markets Thingys
Many things were done in this commit.

--- a/app/imports/ui/pages/search-page.html
+++ b/app/imports/ui/pages/search-page.html
@@ -4,7 +4,7 @@
 
       <script type="text/javascript" >
 
-        window.onload = getLocation;
+        window.onload = getLocatfion;
 
         var geo = navigator.geolocation;     /*     Here we will check if the browser supports the Geolocation API; if exists, then we will display the location     */
 
