--- a/app/imports/ui/pages/find-by-day.html
+++ b/app/imports/ui/pages/find-by-day.html
@@ -1,4 +1,4 @@
-<template name="List_Markets_Page">
+<template name="Find_By_Day">
   <div class="ui container">
 
     {{#if Template.subscriptionsReady}}
