Addition of something

--- a/app/imports/ui/pages/search-page.html
+++ b/app/imports/ui/pages/search-page.html
@@ -7,6 +7,9 @@
 
         var map;
         var geocoder;
+
+        window.onload = InitializeMap;
+
         function InitializeMap() {
 
           var latlng = new google.maps.LatLng(21.100, 202.344);
@@ -44,7 +47,7 @@
           FindLocaiton();
         }
 
-        window.onload = InitializeMap;
+        //window.onload = InitializeMap;
 
       </script>
     </head>
