--- a/app/imports/ui/pages/find-by-day.html
+++ b/app/imports/ui/pages/find-by-day.html
@@ -16,7 +16,7 @@
       </thead>
 
       <tbody>
-      {{#each market in marketsList}}
+      {{#each market in dayMarketsList}}
       <tr>
         <td>{{market.name}}</td>
         <td>{{market.days}}</td>
