Deleting and Adding
Deleted Unecessicary html and js files, added in new pages for each day
of the week.

--- a/app/imports/ui/pages/find-by-day-thursday.html
+++ b/app/imports/ui/pages/find-by-day-thursday.html
@@ -1,4 +1,4 @@
-<template name="Find_By_Day">
+<template name="Find_By_Day_Thursday">
   <div class="ui container" style="padding:40px">
     {{#if Template.subscriptionsReady}}
     <div class="ui cards" style="margin-left:60px">
