add reviews page

--- a/app/imports/ui/pages/list-markets-page.html
+++ b/app/imports/ui/pages/list-markets-page.html
@@ -15,7 +15,7 @@
           </div>
         </div>
         <div class="ui bottom attached button">
-          Reviews
+          <a class="{{ isActiveRoute 'Reviews_Page'}} item" href="{{ pathFor 'Reviews_Page' }}">Reviews</a>
         </div>
       </div>
       {{/each}}
