--- a/app/imports/ui/pages/search-page.html
+++ b/app/imports/ui/pages/search-page.html
@@ -267,7 +267,7 @@
               longitude = results[0].geometry.location.lng();
 
               map.setCenter(results[0].geometry.location);
-              var marker = new google.maps.Marker({
+              var markerPrime = new google.maps.Marker({
                 map: map,
                 position: results[0].geometry.location
               });
@@ -277,13 +277,13 @@
                 radius: 11000,    // 10 miles in metres
                 fillColor: '#AA0000'
               });
-              circle.bindTo('center', marker, 'position');
+              circle.bindTo('center', markerPrime, 'position');
 
               for (i = 0; i < marketSeeds.length; i++) {
                 let latComp = _.pluck(marketSeeds, 'latitude');
                 let lngComp = _.pluck(marketSeeds, 'longitude');
                 distance.push(getDistanceFromLatLonInKm(latitude, longitude, latComp[i], lngComp[i]))
-               }
+              }
 
               for (i = 0; i < distance.length; i++) {
                 if (distance[i] <= 11) {
@@ -291,11 +291,17 @@
                 }
               }
 
-              console.log(distance);
-              console.log(closeMarkets);
+              for (i = 0; i < closeMarkets.length; i++) {
+                var position = new google.maps.LatLng(closeMarkets[i].latitude, closeMarkets[i].longitude);
+                marker = new google.maps.Marker({
+                  position: position,
+                  map: map,
+                  title: closeMarkets[i].name,
+                });
 
-
-
+                console.log(distance);
+                console.log(closeMarkets);
+              }
             }
             else {
               alert("Geocode was not successful for the following reason: " + status);
