Added more marker labels

--- a/app/imports/ui/pages/search-page.html
+++ b/app/imports/ui/pages/search-page.html
@@ -297,7 +297,7 @@
                 marker = new google.maps.Marker({
                   position: position,
                   map: map,
-                  title: closeMarkets[i].name,
+                  title: closeMarkets[i].name + " " + closeMarkets[i].address + " " + closeMarkets[i].city,
                 });
 
                 console.log(distance);
